<resources>
    <string name="app_name">Physics Bot Free</string>
    <string name="welcome">Welcome To Physics Bot</string>
    <string name="instructions">Select the type of problem you\'re working on</string>
    <string name="kinlabel">Kinematics</string>
    <string name="mechlabel">Mechanics</string>
    <string name="eleclabel">Electricity</string>
    <string name="maglebel">Magnetism</string>
    <string name="action_settings">Something goes here</string>
    <string name="solve">Solve</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="solution">Solution</string>
    <string name="showWork">Show Work</string>
    <string name="hideWork">Hide Work</string>
    <string name="exit">Exit</string>
    <string name="more">Do another problem</string>
    <string name="mechanics">Please click on the button that shows the variables you have, and the one you are trying to solve for</string>
    <string name="forces">Force, mass, acceleration</string>
    <string name="frictionforce">Force, friction constant, normal force</string>
    <string name="torque">Torque, distance, force</string>
    <string name="momentum">Momentum, mass, velocity</string>
    <string name="impulse">Impulse, force, time</string>
    <string name="kineticenergy">Kinetic energy, mass, velocity</string>
    <string name="potentialenergyeq">Potential energy, mass, gravitational acceleration, height</string>
    <string name="workeq">Work, force, distance</string>
    <string name="powereq">Power, work, time</string>
    <string name="powereqtwo">Power, force, velocity</string>
    <string name="springpotential">Potential energy, spring constant, distance</string>
    <string name="springperiod">Period, mass, spring constant</string>
    <string name="pendulumperiod">Period, length, gravitational acceleration</string>
    <string name="period">Period, frequency</string>
    <string name="gravityforce">Force, gravitational constant, mass, distance</string>
    <string name="gravitypotential">Potential energy, gravitational constant, mass, distance</string>
    <string name="kinematics">Please click the button corresponding to the variable you are trying to solve for</string>
    <string name="missingv">Missing V, Solve For:</string>
    <string name="missingvo">Missing V₀, Solve For:</string>
    <string name="missingt">Missing Δt, Solve For</string>
    <string name="missingx">Missing x₀ and x, Solve For</string>
    <string name="missinga">Missing a, Solve For</string>
    <string name="kinematicsinput">Enter the given variables and click solve</string>
    <string name="electricityinput">Please click on the variable that you are trying to solve for, enter the values of the
        ones you have, then click solve</string>
    <string name="velocity">V</string>
    <string name="initialvelocity">V₀</string>
    <string name="deltat">Δt</string>
    <string name="deltax">Δx</string>
    <string name="position">x</string>
    <string name="initialposition">x₀</string>
    <string name="acceleration">a</string>
    <string name="vmiasolvevo">
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x - x₀ - ½aΔt² = V₀Δt \n\n
        (x - x₀ - ½aΔt²) / Δt = V₀
    </string>
    <string name="vmiasolvet">
        x = x₀ + V₀Δt + ½aΔt² \n\n
        0 = x₀ - x + VoΔt + ½aΔt² \n\n
        Use the quadratic equation where \n
        A = ½a, B = V₀, C = x₀-x \n\n
        Δt = [V₀ ± sqrt(V₀² - 2a(x₀ - x))] / a
    </string>
    <string name="vmiasolvexo">
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x₀ = x - V₀Δt - ½aΔt²
    </string>
    <string name="vmiasolvex">
        x = x₀ + V₀Δt + ½aΔt²
    </string>
    <string name="vmiasolvea">
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x - x₀ - V₀Δt = ½aΔt²\n\n
        2(x - x₀ - V₀Δt) / Δt² = V₀
    </string>
    <string name="vomiasolvev">
        V = V₀ + aΔt \n\n
        V₀ = V - aΔt \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + (V - aΔt)Δt + ½aΔt² \n\n
        x = x₀ + VΔt - ½aΔt² \n\n
        x - x₀ + ½aΔt² = VΔt \n\n
        (x - x₀ + ½aΔt²) / Δt = V
    </string>
    <string name="vomiasolvet">
        V = V₀ + aΔt \n\n
        V₀ = V - aΔt \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + (V - aΔt)Δt + ½aΔt² \n\n
        x = x₀ + VΔt - ½aΔt² \n\n
        ½aΔt² - VΔt + x - x₀
        Use the quadratic equation where \n
        A = ½a, B = V, C = x - x₀ \n\n
        Δt = [V ± sqrt(V² - 2a(x - x₀))] / a
    </string>
    <string name="vomiasolvexo">
        V = V₀ + aΔt \n\n
        V₀ = V - aΔt \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + (V - aΔt)Δt + ½aΔt² \n\n
        x = x₀ + VΔt - ½aΔt² \n\n
        x₀ = x - VΔt + ½aΔt²
    </string>
    <string name="vomiasolvex">
        V = V₀ + aΔt \n\n
        V₀ = V - aΔt \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + (V - aΔt)Δt + ½aΔt² \n\n
        x = x₀ + VΔt - ½aΔt²
    </string>
    <string name="vomiasolvea">
        V = V₀ + aΔt \n\n
        V₀ = V - aΔt \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + (V - aΔt)Δt + ½aΔt² \n\n
        x = x₀ + VΔt - ½aΔt² \n\n
        x - x₀ - VΔt = ½aΔt² \n\n
        2(VΔt + x₀ - x) / Δt² = a
    </string>
    <string name="tmiasolvev">
        V² = V₀² + 2a(x - x₀) \n\n
        V = sqrt(V₀² + 2a(x - x₀))
    </string>
    <string name="tmiasolvevo">
        V² = V₀² + 2a(x - x₀) \n\n
        V² - 2a(x - x₀) = V₀² \n\n
        sqrt(V² - 2a(x - x₀)) = V₀
    </string>
    <string name="tmiasolvexo">
        V² = V₀² + 2a(x - x₀) \n\n
        V² - V₀² = 2a(x - x₀) \n\n
        (V² - V₀²) / 2a = (x - x₀) \n\n
        [(V² - V₀²) / 2a] - x = -x₀ \n\n
        x - [(V² - V₀²) / 2a] = x₀
    </string>
    <string name="tmiasolvex">
        V² = V₀² + 2a(x - x₀) \n\n
        V² - V₀² = 2a(x - x₀) \n\n
        (V² - V₀²) / 2a = (x - x₀) \n\n
        [(V² - V₀²) / 2a] + x₀ = x
    </string>
    <string name="tmiasolvea">
        V² = V₀² + 2a(x - x₀) \n\n
        V² - V₀² = 2a(x - x₀) \n\n
        (V² - V₀²) / 2(x - x₀) = a
    </string>
    <string name="xmiasolvev">
        V = V₀ + aΔt
    </string>
    <string name="xmiasolvevo">
        V = V₀ + aΔt \n\n
        V - aΔt = V₀
    </string>
    <string name="xmiasolvet">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / a = Δt
    </string>
    <string name="xmiasolvea">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a
    </string>
    <string name="amiasolvev">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt² / Δt \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt \n\n
        x - x₀ - V₀Δt = ½(V - V₀)Δt \n\n
        2(x - x₀ - V₀Δt) / Δt = V - V₀ \n\n
        [2(x - x₀ - V₀Δt) / Δt] + V₀ = V</string>
    <string name="amiasolvevo">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt² / Δt \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt \n\n
        x - x₀ - V₀Δt = ½(V - V₀)Δt \n\n
        2(x - x₀ - V₀Δt) / Δt = V - V₀ \n\n
        [2(x - x₀ - V₀Δt) / Δt] - V = - V₀ \n\n
        V - [2(x - x₀ - V₀Δt) / Δt] = V₀
    </string>
    <string name="amiasolvexo">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt² / Δt \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt \n\n
        x - V₀Δt - ½(V - V₀)Δt = x₀
    </string>
    <string name="amiasolvex">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt² / Δt \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt
    </string>
    <string name="amiasolvet">
        V = V₀ + aΔt \n\n
        V - V₀ = aΔt \n\n
        (V - V₀) / Δt = a \n\n
        Substitute into \n
        x = x₀ + V₀Δt + ½aΔt² \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt² / Δt \n\n
        x = x₀ + V₀Δt + ½(V - V₀)Δt \n\n
        x - x₀ = V₀Δt + ½(V - V₀)Δt \n\n
        x - x₀ = (½V + ½V₀)Δt \n\n 2(x - x₀) / (V + V₀) = Δt
    </string>
    <string name="electricity">Please click on the button that shows the variables you have, and the one you are trying to solve for</string>
    <string name="Σr">Only resistances</string>
    <string name="Σc">Only capacitances</string>
    <string name="vir">Voltage, capacitance, current</string>
    <string name="piv">Power, current, voltage</string>
    <string name="cqv">Capacitance, charge, voltage</string>
    <string name="vkqr">Voltage, point charge, distance</string>
    <string name="iqt">Current, charge, time</string>
    <string name="fkqr">Force, point charge, distance</string>
    <string name="efq">Electric field, force, point charge</string>
    <string name="uqv">Potential energy, point charge, voltage</string>
    <string name="ukqr">Potential energy, point charge, distance</string>
    <string name="cϵad">Capacitance, area, distance</string>
    <string name="rρla">Resistance, resistivity, length, area</string>
    <string name="ubigqv">Potential energy, charge, voltage</string>
    <string name="ucv">Potential energy, capcitance, voltage</string>
    <string name="evd">Electric field, voltage, distance</string>
    <string name="fixedtitle">"Are they in series (S) or parallel (P)?"</string>
    <string name="seriesres">
        R1 + R2 = Rt
    </string>
    <string name="parallelres">
        1 / R1 + 1 / R2 = 1 / Rt \n\n
        1 / (1 / R1 + 1 / R2) = Rt
    </string>
    <string name="parallelcap">
        1 / C1 + 1 / C2 = 1 / Ct \n\n
        1 / (1 / C1 + 1 / C2) = Ct
    </string>
    <string name="seriescap">
        C1 + C2 = Ct
    </string>
    <string name="vinvir">
        V = IR
    </string>
    <string name="iinvir">
        V = IR \n\n
        V / R = I
    </string>
    <string name="rinvir">
        V = IR \n\n
        V / I = R
    </string>
    <string name="pinpiv">
        P = IV
    </string>
    <string name="iinpiv">
        P = IV \n\n
        P / V = I
    </string>
    <string name="vinpiv">
        P = IV \n\n
        P / I = V
    </string>
    <string name="cincqv">
        C = Q / V
    </string>
    <string name="qincqv">
        C = Q / V \n\n
        CV = Q
    </string>
    <string name="vincqv">
        C = Q / V \n\n
        Q / C = V
    </string>
    <string name="vinvkqr">
        V = k(q / r)
    </string>
    <string name="qinvkqr">
        V = k(q / r) \n\n
        V / k = q / r \n\n
        (Vr) / k = q
    </string>
    <string name="rinvkqr">
        V = k(q / r) \n\n
        V / (kq) = 1 / r \n\n
        (kq) / V = r
    </string>
    <string name="iiniqt">
        I = ΔQ / Δt
    </string>
    <string name="qiniqt">
        I = ΔQ / Δt \n\n
        IΔt = ΔQ
    </string>
    <string name="tiniqt">
        I = ΔQ / Δt \n\n
        I / ΔQ = 1 / Δt \n\n
        ΔQ / I = Δt
    </string>
    <string name="finfkqr">
        F = k(q1q2 / r²)
    </string>
    <string name="q1infkqr">
        F = k(q1q2 / r²) \n\n
        Fr² = kq1q2 \n\n
        (Fr²) / (kq2) = q1
    </string>
    <string name="q2infkqr">
        F = k(q1q2 / r²) \n\n
        Fr² = kq1q2 \n\n
        (Fr²) / (kq1) = q2
    </string>
    <string name="rinfkqr">
        F = k(q1q2 / r²) \n\n
        F / (kq1q2) = 1 / r² \n\n
        (kq1q2) / F = r² \n\n
        sqrt((kq1q2)) / F = r
    </string>
    <string name="einefq">
        E = F / q
    </string>
    <string name="finefq">
        E = F / q \n\n
        Eq = F
    </string>
    <string name="qinefq">
        E = F / q \n\n
        E / F = 1 / q \n\n
        F / E = q
    </string>
    <string name="uinuqv">
        Ue = qV
    </string>
</resources>