<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#303030"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:id="@+id/relativelayout">

        <TextView
            android:text="@string/mechanics"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:id="@+id/title"
            android:layout_height="75dp"/>

        <Button
            android:id="@+id/sumforces"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/forces"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/frictionalforce"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/frictionforce"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/sumforces"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/torque"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/torque"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/frictionalforce"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/momentum"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/momentum"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/torque"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/impulse"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/impulse"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/momentum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/kineticenergy"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/kineticenergy"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/impulse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/potentialenergyeq"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/potentialenergyeq"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/kineticenergy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/workeq"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/workeq"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/potentialenergyeq"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/powereq"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/powereq"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/workeq"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/powereqtwo"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/powereqtwo"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/powereq"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/springpotential"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/springpotential"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/powereqtwo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/springperiod"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/springperiod"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/springpotential"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/pendulumperiod"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/pendulumperiod"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/springperiod"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/period"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/pendulumperiod"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/gravityforce"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/gravityforce"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/period"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/gravitypotential"
            android:layout_width="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:layout_height="40dp"
            android:text="@string/gravitypotential"
            android:background="@drawable/longercirclebutton"
            android:layout_below="@+id/gravityforce"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:background="@drawable/buttonshapeandcolor"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/gravitypotential"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>
</ScrollView>
